; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/cache/extr_plancache.c_CompleteCachedPlan.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/cache/extr_plancache.c_CompleteCachedPlan.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, i32, i32, i32, i32, i32, i32, i8*, i32, i32*, i32, i32, i32, i32, i32, i32, i64, i32*, i32*, i32* }

@CurrentMemoryContext = common dso_local global i32* null, align 8
@CACHEDPLANSOURCE_MAGIC = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [16 x i8] c"CachedPlanQuery\00", align 1
@ALLOCSET_START_SMALL_SIZES = common dso_local global i32 0, align 4
@row_security = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @CompleteCachedPlan(%struct.TYPE_4__* %0, i32* %1, i32* %2, i32* %3, i32 %4, i32 %5, i8* %6, i32 %7, i32 %8) #0 {
  %10 = alloca %struct.TYPE_4__*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i8*, align 8
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32*, align 8
  %20 = alloca i32*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %10, align 8
  store i32* %1, i32** %11, align 8
  store i32* %2, i32** %12, align 8
  store i32* %3, i32** %13, align 8
  store i32 %4, i32* %14, align 4
  store i32 %5, i32* %15, align 4
  store i8* %6, i8** %16, align 8
  store i32 %7, i32* %17, align 4
  store i32 %8, i32* %18, align 4
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 19
  %23 = load i32*, i32** %22, align 8
  store i32* %23, i32** %19, align 8
  %24 = load i32*, i32** @CurrentMemoryContext, align 8
  store i32* %24, i32** %20, align 8
  %25 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = load i64, i64* @CACHEDPLANSOURCE_MAGIC, align 8
  %29 = icmp eq i64 %27, %28
  %30 = zext i1 %29 to i32
  %31 = call i32 @Assert(i32 %30)
  %32 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %33 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %32, i32 0, i32 1
  %34 = load i32, i32* %33, align 8
  %35 = icmp ne i32 %34, 0
  %36 = xor i1 %35, true
  %37 = zext i1 %36 to i32
  %38 = call i32 @Assert(i32 %37)
  %39 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %40 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %39, i32 0, i32 16
  %41 = load i64, i64* %40, align 8
  %42 = icmp ne i64 %41, 0
  br i1 %42, label %43, label %45

43:                                               ; preds = %9
  %44 = load i32*, i32** @CurrentMemoryContext, align 8
  store i32* %44, i32** %12, align 8
  br label %63

45:                                               ; preds = %9
  %46 = load i32*, i32** %12, align 8
  %47 = icmp ne i32* %46, null
  br i1 %47, label %48, label %54

48:                                               ; preds = %45
  %49 = load i32*, i32** %12, align 8
  %50 = load i32*, i32** %19, align 8
  %51 = call i32 @MemoryContextSetParent(i32* %49, i32* %50)
  %52 = load i32*, i32** %12, align 8
  %53 = call i32 @MemoryContextSwitchTo(i32* %52)
  br label %62

54:                                               ; preds = %45
  %55 = load i32*, i32** %19, align 8
  %56 = load i32, i32* @ALLOCSET_START_SMALL_SIZES, align 4
  %57 = call i32* @AllocSetContextCreate(i32* %55, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i32 %56)
  store i32* %57, i32** %12, align 8
  %58 = load i32*, i32** %12, align 8
  %59 = call i32 @MemoryContextSwitchTo(i32* %58)
  %60 = load i32*, i32** %11, align 8
  %61 = call i32* @copyObject(i32* %60)
  store i32* %61, i32** %11, align 8
  br label %62

62:                                               ; preds = %54, %48
  br label %63

63:                                               ; preds = %62, %43
  %64 = load i32*, i32** %12, align 8
  %65 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %66 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %65, i32 0, i32 18
  store i32* %64, i32** %66, align 8
  %67 = load i32*, i32** %11, align 8
  %68 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %69 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %68, i32 0, i32 17
  store i32* %67, i32** %69, align 8
  %70 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %71 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %70, i32 0, i32 16
  %72 = load i64, i64* %71, align 8
  %73 = icmp ne i64 %72, 0
  br i1 %73, label %97, label %74

74:                                               ; preds = %63
  %75 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %76 = call i32 @IsTransactionStmtPlan(%struct.TYPE_4__* %75)
  %77 = icmp ne i32 %76, 0
  br i1 %77, label %97, label %78

78:                                               ; preds = %74
  %79 = load i32*, i32** %11, align 8
  %80 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %81 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %80, i32 0, i32 15
  %82 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %83 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %82, i32 0, i32 14
  %84 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %85 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %84, i32 0, i32 13
  %86 = call i32 @extract_query_dependencies(i32* %79, i32* %81, i32* %83, i32* %85)
  %87 = call i32 (...) @GetUserId()
  %88 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %89 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %88, i32 0, i32 12
  store i32 %87, i32* %89, align 8
  %90 = load i32, i32* @row_security, align 4
  %91 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %92 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %91, i32 0, i32 11
  store i32 %90, i32* %92, align 4
  %93 = load i32*, i32** %12, align 8
  %94 = call i32 @GetOverrideSearchPath(i32* %93)
  %95 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %96 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %95, i32 0, i32 10
  store i32 %94, i32* %96, align 8
  br label %97

97:                                               ; preds = %78, %74, %63
  %98 = load i32*, i32** %19, align 8
  %99 = call i32 @MemoryContextSwitchTo(i32* %98)
  %100 = load i32, i32* %14, align 4
  %101 = icmp sgt i32 %100, 0
  br i1 %101, label %102, label %120

102:                                              ; preds = %97
  %103 = load i32, i32* %14, align 4
  %104 = sext i32 %103 to i64
  %105 = mul i64 %104, 4
  %106 = trunc i64 %105 to i32
  %107 = call i64 @palloc(i32 %106)
  %108 = inttoptr i64 %107 to i32*
  %109 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %110 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %109, i32 0, i32 9
  store i32* %108, i32** %110, align 8
  %111 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %112 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %111, i32 0, i32 9
  %113 = load i32*, i32** %112, align 8
  %114 = load i32*, i32** %13, align 8
  %115 = load i32, i32* %14, align 4
  %116 = sext i32 %115 to i64
  %117 = mul i64 %116, 4
  %118 = trunc i64 %117 to i32
  %119 = call i32 @memcpy(i32* %113, i32* %114, i32 %118)
  br label %123

120:                                              ; preds = %97
  %121 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %122 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %121, i32 0, i32 9
  store i32* null, i32** %122, align 8
  br label %123

123:                                              ; preds = %120, %102
  %124 = load i32, i32* %14, align 4
  %125 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %126 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %125, i32 0, i32 2
  store i32 %124, i32* %126, align 4
  %127 = load i32, i32* %15, align 4
  %128 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %129 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %128, i32 0, i32 8
  store i32 %127, i32* %129, align 8
  %130 = load i8*, i8** %16, align 8
  %131 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %132 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %131, i32 0, i32 7
  store i8* %130, i8** %132, align 8
  %133 = load i32, i32* %17, align 4
  %134 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %135 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %134, i32 0, i32 3
  store i32 %133, i32* %135, align 8
  %136 = load i32, i32* %18, align 4
  %137 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %138 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %137, i32 0, i32 4
  store i32 %136, i32* %138, align 4
  %139 = load i32*, i32** %11, align 8
  %140 = call i32 @PlanCacheComputeResultDesc(i32* %139)
  %141 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %142 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %141, i32 0, i32 6
  store i32 %140, i32* %142, align 4
  %143 = load i32*, i32** %20, align 8
  %144 = call i32 @MemoryContextSwitchTo(i32* %143)
  %145 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %146 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %145, i32 0, i32 1
  store i32 1, i32* %146, align 8
  %147 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %148 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %147, i32 0, i32 5
  store i32 1, i32* %148, align 8
  ret void
}

declare dso_local i32 @Assert(i32) #1

declare dso_local i32 @MemoryContextSetParent(i32*, i32*) #1

declare dso_local i32 @MemoryContextSwitchTo(i32*) #1

declare dso_local i32* @AllocSetContextCreate(i32*, i8*, i32) #1

declare dso_local i32* @copyObject(i32*) #1

declare dso_local i32 @IsTransactionStmtPlan(%struct.TYPE_4__*) #1

declare dso_local i32 @extract_query_dependencies(i32*, i32*, i32*, i32*) #1

declare dso_local i32 @GetUserId(...) #1

declare dso_local i32 @GetOverrideSearchPath(i32*) #1

declare dso_local i64 @palloc(i32) #1

declare dso_local i32 @memcpy(i32*, i32*, i32) #1

declare dso_local i32 @PlanCacheComputeResultDesc(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
